2008-06-24  Ivan Frade  <ivan.frade@nokia.com>

	* tests/common/Makefile.am
	* tests/scripts/Makefile.am
	* tests/trackerd/xesam/Makefile.am: Including Makefile.decl to
	allow "make test" to run smoothly.

	* tests/Makefile.am
	* tests/libtracker-db/Makefile.am
	* tests/libtracker-db/run-test-in-tmp-dir.sh
	* tests/libtracker-db/tracker-db-manager-test.c: Initial
	tracker_db_manager test files.
	
2008-06-24  Martyn Russell  <martyn@imendio.com>

	* src/libtracker/tracker.c:
	(tracker_search_metadata_by_text_async): Re-added the async DBus
	API we removed which breaks tracker being installed to /usr due to
	applications depending on this API.

2008-06-24  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-index.[ch]:
	* src/tracker-indexer/tracker-indexer.c: Added a timer and a count
	so we know when we are finished how long it took and how many
	items were indexed. Also, don't flush after every item, flush
	every 10 seconds or so.

2008-06-24  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.[ch]: Now we detect the backend
	used for monitoring and set the limits accordingly. We also now
	provide the warning (if we reach the limit) only once and make the
	number of monitors we couldn't add available by API.

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-xesam-manager.c:
	* src/libtracker-db/tracker-db-manager.c:
	* data/sqlite-stored-procs.sql:

	Fix for a warning about table Events not existing

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-main.c:
	* src/libtracker-db/tracker-db-manager.c:
	* src/libtracker-db/tracker-db-manager.h:

	tracker_db_manager_shutdown must not remove the directory in tmp with
	cache.db in case the indexer calls it.

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	src/tracker-indexer/tracker-indexer.c: The table Events for