@@ -1,3 +1,11 @@
+2008-06-24  Martyn Russell  <martyn@imendio.com>
+
+	* src/libtracker-common/Makefile.am:
+	* src/libtracker-common/tracker-config.c: 
+	* src/tracker-indexer/Makefile.am:
+	* src/tracker-indexer/modules/Makefile.am: Monitor config file for
+	changes and reload if it does.
+
 2008-06-24  Ivan Frade  <ivan.frade@nokia.com>
 
 	* tests/common/Makefile.am
